[package]
name = "vaporsd"
version = "0.1.0"
authors = [ "Nurrl <nurrl@github.com>" ]
description = "Vapors daemon"
repository = "https://github.com/vaporsd/vaporsd.git"
readme = "README.md"
license = "GPLv3"

[dependencies]
emojicons = "1.0.1"
termion = "1.5"

shiplift = "0.4"
tokio = "0.1.13"

#actix-web = "0.6.9"
#actix-web-httpauth = "0.0.4"

#serde = "1.0"
#serde_json = "1.0"
#serde_derive = "1.0"

#http = "0.1.13"
#redis = "0.9"
